--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doodle Js Demo</title>
+    <script src="/src/doodle.js"></script>
 </head>
 <body>
-    
+    <script>
+        Doodle.getInstance();
+    </script>    
 </body>
 </html>
