added temp files

--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doodle Js Demo</title>
-    <script src="/src/doodle.js"></script>
+    <script src="../dist/dist.js"></script>
 </head>
 <body>
     <script>
-        Doodle.getInstance();
+        window.doodly.getInstance();
     </script>    
 </body>
 </html>
