added drawovwl function

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>lfkjdshekh</h1>
     <button onclick="startDraw()">Draw</button>
+    <button onclick="drawRect()">drawRect</button>
+    <button onclick="reDrawOval()">Oval</button>
+
+
+
     <script type="text/javascript"  src="../src/doodle.core.js"></script>
 </body>
 </html>
