added dynamic Js buttons

--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <h1>lfkjdshekh</h1>
-    <button onclick="startDraw()">Draw</button>
-    <button onclick="drawRect()">drawRect</button>
-    <button onclick="reDrawOval()">Oval</button>
+    <button onclick="init()">Draw</button>
 
 
 
